--- a/endt1/index.html
+++ b/endt1/index.html
@@ -5,8 +5,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta http-equiv="X-UA-Compatible" content="ie=edge" />
   <link rel="stylesheet" href="../css/style.css" />
+  
   <title>EndT1</title>
-  </head>
+</head>
+
 <body>
   <header id="showcase">
 
@@ -14,8 +16,7 @@
   <header id="inner-module">
     <h1>EndT1</h1>
     <p>
-      Welcome to EndT1 - The world's leading innovators
-      in the Type 1 diabetes space.
+      Welcome to EndT1 - The world's leading innovators in the Type 1 diabetes space.
       </p>
     <a href="#" class="button">Learn More</a>
 
@@ -40,6 +41,4 @@
     </section>
 
   </body>
-
-
 </html>
