--- a/index.html
+++ b/index.html
@@ -1,1 +1,51 @@
-index.html
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <title>EndT1</title>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+  <link rel="stylesheet" type="text/css" href="css/style.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
+  <style>
+
+
+    body {
+      background-color: transparent;
+    }
+
+  .bg {
+     background-image:url('img/landing_op.png');
+     background-size: cover;
+     background-repeat: no-repeat;
+     z-index: -1;
+    }
+
+  </style>
+
+
+</head>
+<body>
+  <div class="bg"></div>
+
+<div class="container">
+  <div class="row">
+    <div class="col-sm-12" style="margin-top:40vh">
+      <h1 class="text-center blue">EndT1</h1>
+      <h3 class="text-center blue">Welcome to EndT1</h3>
+      <h4 class="text-center blue">The world's leading innovators in the Type 1 diabetes space.</h4>
+      <button type="button" class="center-block btn btn-lg log-in blue" onclick="location.href='login.html'">Log In</button>
+      <div class="social-container center-block">
+        <a href="#" class="fa fa-facebook"></a>
+        <a href="#" class="fa fa-linkedin"></a>
+        <a href="#" class="fa fa-instagram"></a>
+      </div>
+    </div>
+  </div>
+</div>
+
+</body>
+</html>
