--- a/login.html
+++ b/login.html
@@ -1,8 +1,12 @@
 <!DOCTYPE html>
 <html>
-
 <head>
-    <title>Login</title>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+  <title>Login</title>
 <head/>
 <!--
 <body>
@@ -26,7 +30,7 @@
 -->
 <body>
   <header id="showcase">
-    <link rel="stylesheet" href="../css/style.css" />
+    <link rel="stylesheet" href="css/old_style.css" />
       <form action="profile.html" method="POST" class="frm">
       <div class="container" style="text-align: center;">
         <label for="uname"><b>Username</b></label>
