--- a/index.html
+++ b/index.html
@@ -17,11 +17,11 @@
       background-color: transparent;
     }
 
-  .bg {
+  html {
      background-image:url('img/landing_op.png');
      background-size: cover;
      background-repeat: no-repeat;
-     z-index: -1;
+     /* z-index: -1; */
     }
 
   </style>
@@ -29,7 +29,6 @@
 
 </head>
 <body>
-  <div class="bg"></div>
 
 <div class="container">
   <div class="row">
@@ -38,10 +37,12 @@
       <h3 class="text-center blue">Welcome to EndT1</h3>
       <h4 class="text-center blue">The world's leading innovators in the Type 1 diabetes space.</h4>
       <button type="button" class="center-block btn btn-lg log-in blue" onclick="location.href='login.html'">Log In</button>
-      <div class="social-container center-block">
-        <a href="#" class="fa fa-facebook"></a>
-        <a href="#" class="fa fa-linkedin"></a>
-        <a href="#" class="fa fa-instagram"></a>
+      <div class="social-container" style="margin-top:40px">
+        <p class="text-center">
+          <a href="#" class="fa fa-facebook facebook circ"></a>
+          <a href="#" class="fa fa-linkedin linkedin circ"></a>
+          <a href="#" class="fa fa-instagram instagram circ"></a>
+        </p>
       </div>
     </div>
   </div>
