--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
     }
 
   html {
-     background-image:url('img/landing_op.png');
+     background-image:url('img/tt.png');
      background-size: cover;
      background-repeat: no-repeat;
-     /* z-index: -1; */
+     min-height:100%;
     }
 
   </style>
@@ -35,14 +35,12 @@
     <div class="col-sm-12" style="margin-top:40vh">
       <h1 class="text-center blue">EndT1</h1>
       <h3 class="text-center blue">Welcome to EndT1</h3>
-      <h4 class="text-center blue">The world's leading innovators in the Type 1 diabetes space.</h4>
+      <p class="subtext text-center blue">The world's leading innovators in the Type 1 diabetes space.</p>
       <button type="button" class="center-block btn btn-lg log-in blue" onclick="location.href='login.html'">Log In</button>
-      <div class="social-container" style="margin-top:40px">
-        <p class="text-center">
-          <a href="#" class="fa fa-facebook facebook circ"></a>
-          <a href="#" class="fa fa-linkedin linkedin circ"></a>
-          <a href="#" class="fa fa-instagram instagram circ"></a>
-        </p>
+      <div class="social-container text-center" style="margin-bottom:30px">
+        <a href="#" class="fa fa-facebook facebook circ"></a>
+        <a href="#" class="fa fa-linkedin linkedin circ"></a>
+        <a href="#" class="fa fa-instagram instagram circ"></a>
       </div>
     </div>
   </div>
