--- a/login.html
+++ b/login.html
@@ -44,7 +44,11 @@
           <input type="checkbox" checked="checked" name="remember"> Remember me
         </label>
       </div>
-
+    </form>
+    <form action="signup.html">
+    <div class="container" style="text-align: center;">
+      <p>New User? <button type="submit">Sign up now</button>
+    </div>
     </form>
     </header>
 
