--- a/signup.html
+++ b/signup.html
@@ -32,7 +32,6 @@
 
                 // If same return True.
                 else{
-										window.location.href="login.html";
                     return true;
 
                 }
@@ -41,10 +40,11 @@
 
 </head>
 
-<body style="background-color: #E9E9E8">
+<body>
+<header id="showcase">
 <link rel="stylesheet" href="css/old_style.css" />
-<center><H1>Please enter the following information <br/> to sign up for your new account:</H1></center>
-<div id="signup" class="container" style="text-align: center; background-color:#4CAF50" >
+<center><H3>Please enter the following information <br/> to sign up for your new account:</H3></center>
+<div class="container" id="signup" style="text-align: center;">
 
 <form name="signupForm" method="POST"
       action="signup_f.php" style="border: 20px solid #fff" onSubmit="return checkPassword(signupForm)">
@@ -75,5 +75,6 @@ Phone number
 
 </form>
 </div>
+</header>
 </body>
 </html>
