Updated site changes 4/22

--- a/login.html
+++ b/login.html
@@ -31,15 +31,15 @@
 <body>
   <header id="showcase">
     <link rel="stylesheet" href="css/old_style.css" />
-      <form action="profile.html" method="POST" class="frm">
+      <form action="login_f.php" method="POST" class="frm">
       <div class="container" style="text-align: center;">
-        <label for="uname"><b>Username</b></label>
-        <input type="text" style="text-align: center;" placeholder="Enter Username" name="uname" required>
+        <label for="username"><b>Username</b></label>
+        <input type="text" style="text-align: center;" placeholder="Enter Username" name="username" required>
 
-        <label for="psw"><b>Password</b></label>
-        <input type="password" style="text-align: center;" placeholder="Enter Password" name="psw" required>
+        <label for="password"><b>Password</b></label>
+        <input type="password" style="text-align: center;" placeholder="Enter Password" name="password" required>
 
-        <button type="submit" href="profile.html">Login</button>
+        <button type="submit">Login</button>
         <label>
           <input type="checkbox" checked="checked" name="remember"> Remember me
         </label>
