--- a/index.html
+++ b/index.html
@@ -18,21 +18,58 @@
     }
 
   html {
-     background-image:url('img/tt.png');
+     background-image:url('img/landing_op.png');
      background-size: cover;
      background-repeat: no-repeat;
      min-height:100%;
     }
+    
+ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
+  background-color: #333;
+}
+
+li {
+  float: left;
+}
+
+li a {
+  display: block;
+  color: white;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+}
+
+/* Change the link color to #111 (black) on hover */
+li a:hover {
+  background-color: #111;
+  color: white;
+  text-decoration: none;
+}
+
+li {
+  border-right: 1px solid #bbb;
+}
+
+li:last-child {
+  border-right: none;
+}
 
   </style>
-
+<ul>
+  <li><a href="#home">Home</a></li>
+  <li><a href="#news">News</a></li>
+  <li><a href="#contact">Contact</a></li>
+  <li style="float:right"><a class="active" href="#about">About</a></li>
+</ul>
 
 </head>
-<body>
+<body> 
 
-<button type="button" class="btn btn-primary btn-lg pull-right" style="margin-top:5vh;margin-right:5vh;" onclick="location.href='view.php'">Products</button> 
-
-=======
 
 </head>
 <body>
