--- a/user_signup.html
+++ b/user_signup.html
@@ -4,10 +4,9 @@
 
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <!--<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">-->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
-  <title>Signup Page</title>
+  <title>Sign Up</title>
 
 <script>
 	// Function to check Whether both passwords
@@ -47,7 +46,7 @@
 <div class="container" id="signup" style="text-align: center;">
 
 <form name="signupForm" method="POST"
-      action="signup_f.php" style="border: 20px solid #fff" onSubmit="return checkPassword(signupForm)">
+      action="signup_f.php" style="border: 20px solid #fff" class="frm" onSubmit="return checkPassword(signupForm)">
 
 <input type="text" id = "user" name="login" placeholder="username" required/>
 <br/>
