--- a/index.html
+++ b/index.html
@@ -10,25 +10,65 @@
   <link rel="stylesheet" type="text/css" href="css/style.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
-  <style>
+<style>
 
-    body {
-      background-color: transparent;
-    }
+body {
+  background-color: transparent;
+}
 
-  html {
-     background-image:url('img/tt.png');
-     background-size: cover;
-     background-repeat: no-repeat;
-     min-height:100%;
-    }
+html {
+  background-image:url('img/landing_op.png');
+  background-size: cover;
+  background-repeat: no-repeat;
+  min-height:100%;
+}
+    
+ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
+  background-color: #333;
+}
 
-  </style>
+li {
+  float: left;
+}
+
+li a {
+  display: block;
+  color: white;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+}
+
+/* Change the link color to #111 (black) on hover */
+li a:hover {
+  background-color: #111;
+  color: white;
+  text-decoration: none;
+}
+
+li {
+  border-right: 1px solid #bbb;
+}
+
+li:last-child {
+  border-right: none;
+}
+
+</style>
+
+<ul>
+  <li><a href="#home"> Home </a></li>
+  <li><a href="#news"> News </a></li>
+  <li><a href="contact.html"> Contact </a></li>
+  <li style="float:right"><a class="active" href="#about"> About </a></li>
+</ul>
 
 </head>
 <body>
-
-<button type="button" class="btn btn-primary btn-lg pull-right" style="margin-top:5vh;margin-right:5vh;" onclick="location.href='view.php'">Products</button> 
 
 <div class="container">
   <div class="row">
